--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
           "height": 35
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "_xUxLlZFM728"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "xy035zQzM75b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "hme-WlDYM-Od"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
       "metadata": {
         "id": "mv1h3vJsM-RK"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
           "height": 430
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,7 +271,7 @@
       "metadata": {
         "id": "Y4o2AvhWNBdM"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +282,7 @@
       "metadata": {
         "id": "9fXfsVnANBiG"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "a2zJCXNUND9X"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -323,7 +323,7 @@
           "height": 35
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +381,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "WQ-pCgdaMOlc"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,24 +489,6 @@
       "metadata": {
         "id": "JD2z3LW8312E"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "c7Cn5XFfMP5E"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eVNPFr0pMRWl"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -546,30 +528,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def Promedio():\n",
+        "  calculo = (10 + 8 + 7)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "WgWoULpnMSrT"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Promedio()"
+      ],
       "metadata": {
-        "id": "VKfg0zkDMStp"
+        "id": "VKfg0zkDMStp",
+        "outputId": "ac0070b9-81d0-434e-92b0-f2dfb0f23503",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "04YIHBu-MTNB"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.333333333333334\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -589,30 +580,62 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def Promedio(nota_1,nota_2,nota_3):\n",
+        "  calculo = (nota_1+nota_2+nota_3)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "1QHJXCYsMUx3"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Promedio(10,8,7)"
+      ],
       "metadata": {
-        "id": "txkkIwheMU0n"
+        "id": "txkkIwheMU0n",
+        "outputId": "533a7cf0-d356-4b90-a5f9-99a099af671b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.333333333333334\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Promedio(nota_1=10,nota_2=8,nota_3=7)"
+      ],
       "metadata": {
-        "id": "Pq88ApQEMWK9"
+        "id": "Pq88ApQEMWK9",
+        "outputId": "1e84ae8e-f343-467c-d540-08865e328690",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.333333333333334\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -641,26 +664,44 @@
       "metadata": {
         "id": "U4MlTO9ucAKc"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(lista):\n",
+        "  calculo= sum(lista)/len(lista)\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "ZrqyDBNFMYOK"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(notas)"
+      ],
       "metadata": {
-        "id": "wEkixagwMY2E"
+        "id": "wEkixagwMY2E",
+        "outputId": "82bc7152-cd77-4447-94fc-179fcfd8bf24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -680,15 +721,6 @@
       "metadata": {
         "id": "skMq7d0_xHND"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yTOqJSgsMbdJ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
