--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -536,7 +536,7 @@
       "metadata": {
         "id": "WgWoULpnMSrT"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +551,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
       "metadata": {
         "id": "1QHJXCYsMUx3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +626,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "U4MlTO9ucAKc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -677,7 +677,7 @@
       "metadata": {
         "id": "ZrqyDBNFMYOK"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +692,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,44 +757,84 @@
       "metadata": {
         "id": "GlWdnX7Ubgl3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(lista):\n",
+        "  calculo= sum(lista)/len(lista)\n",
+        "  return calculo"
+      ],
       "metadata": {
         "id": "JdMFsT9GMgI6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(notas)"
+      ],
       "metadata": {
-        "id": "p7AwNnTCMgLf"
+        "id": "p7AwNnTCMgLf",
+        "outputId": "2588277e-d5fb-405c-a324-a45a9d5cddf7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resultado = promedio(notas)"
+      ],
       "metadata": {
         "id": "35zC247QMgRP"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(resultado)"
+      ],
       "metadata": {
-        "id": "TjmB8IWpMgV4"
+        "id": "TjmB8IWpMgV4",
+        "outputId": "a24a9c9d-576e-4481-be42-063b355fa29d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -817,58 +857,60 @@
       "cell_type": "code",
       "source": [
         "# Notas del estudiante\n",
-        "notas = [8.5, 9.0, 6.0, 10.0]"
+        "notas = [8.6, 3.0, 6.0, 10.0]"
       ],
       "metadata": {
         "id": "3saGo2kDf0BY"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio (lista) :\n",
+        "  resultado= sum(lista)/len(lista)\n",
+        "  if resultado >= 7.0:\n",
+        "    situacion = \"Aprobado(a)\"\n",
+        "  else:\n",
+        "    situacion = \"Reprobado(a)\"\n",
+        "  return f'El/la estudiante saco un total de : {resultado} y su situacion es : {situacion}'"
+      ],
       "metadata": {
         "id": "unNLrdFjMjbv"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(notas)"
+      ],
       "metadata": {
-        "id": "Rmvg4hNeMjeD"
+        "id": "Rmvg4hNeMjeD",
+        "outputId": "b8d06659-c559-43e0-85cd-a7ff7f0b7f60",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jCYuFpmeMji6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "hSht0Z2cMjlT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tLdjCulMMjnD"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'El/la estudiante saco un total de : 6.9 y su situacion es : Reprobado(a)'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -891,21 +933,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Ingrese su nota:'))\n",
+        "\n",
+        "promedio= lambda x: x+ 0.5\n",
+        "promedio(nota)"
+      ],
       "metadata": {
-        "id": "wcNxDJoPMmTJ"
+        "id": "wcNxDJoPMmTJ",
+        "outputId": "f8a33a96-3c43-454a-fee6-64fc73f574c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "S-baAoaQMmVy"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese su nota:3\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -932,21 +992,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "n1 = float(input('Ingrese la primera nota:'))\n",
+        "n2 = float(input('Ingrese la segunda nota:'))\n",
+        "n3 = float(input('Ingrese la tercera nota:'))\n",
+        "\n",
+        "promedio= lambda x,y,z: (x*3 + y*2 + z*5)/10\n",
+        "nota_final = promedio(n1,n2,n3)\n",
+        "print(f'El promedio ponderado del estudiante es: {nota_final}')"
+      ],
       "metadata": {
-        "id": "6YxEn9aiMnYJ"
+        "id": "6YxEn9aiMnYJ",
+        "outputId": "01035893-505d-4601-8133-b3f7575bd2ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Ptn9gQaPMnaz"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la primera nota:5\n",
+            "Ingrese la segunda nota:7\n",
+            "Ingrese la tercera nota:3\n",
+            "El promedio ponderado del estudiante es: 4.4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -975,26 +1049,61 @@
       "metadata": {
         "id": "RdoaWhuVI_OB"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_actualizadas = map(lambda x: x + 0.5,(notas))\n",
+        "notas_actualizadas= list(notas_actualizadas)\n",
+        "notas_actualizadas"
+      ],
       "metadata": {
-        "id": "PzDfbv-kMq2t"
+        "id": "PzDfbv-kMq2t",
+        "outputId": "ba040b49-8736-4f20-943b-1ba8f231f5ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[6.5, 7.5, 9.5, 6.0, 8.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(notas_actualizadas)\n",
+        "print(notas)"
+      ],
       "metadata": {
-        "id": "3YDQ39wFMq5u"
+        "id": "3YDQ39wFMq5u",
+        "outputId": "c372a7ee-79e2-4805-93bd-e4be63105252",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6.5, 7.5, 9.5, 6.0, 8.5]\n",
+            "[6.0, 7.0, 9.0, 5.5, 8.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1010,33 +1119,6 @@
       "metadata": {
         "id": "SOK4BC4mmKbG"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZbfpvfWJMsjv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "TA-zGLJfMseA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "PrAppvR6MuKm"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1097,44 +1179,121 @@
       "metadata": {
         "id": "jlEP-c2YthpB"
       },
-      "execution_count": null,
+      "execution_count": 107,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres= []\n",
+        "notas = []\n",
+        "\n",
+        "for i in range(len(notas_grupo)):\n",
+        "  if i % 4 == 0:\n",
+        "    nombres.append(notas_grupo[i])\n",
+        "  else:\n",
+        "    notas.append(notas_grupo[i])"
+      ],
       "metadata": {
         "id": "azR_cX-ILghB"
       },
-      "execution_count": null,
+      "execution_count": 108,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres"
+      ],
       "metadata": {
-        "id": "GhfsJvs9LgjY"
+        "id": "GhfsJvs9LgjY",
+        "outputId": "0ec279f5-54df-424e-8a1f-8b1975b24e4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas"
+      ],
       "metadata": {
-        "id": "tB8FA20gLiog"
+        "id": "tB8FA20gLiog",
+        "outputId": "158ea394-9079-4c10-c8df-1bae7d2cac19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8.0, 9.0, 10.0, 9.0, 7.0, 6.0, 3.4, 7.0, 7.0, 5.5, 6.6, 8.0, 6.0, 10.0, 9.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_separadas =[]\n",
+        "for i in range(0, len(notas),3):\n",
+        "  notas_separadas.append(notas[i:i+3])"
+      ],
       "metadata": {
         "id": "SCi8Jl82Liqo"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas_separadas"
+      ],
+      "metadata": {
+        "id": "kRn1oNxwhPwf",
+        "outputId": "e00d6616-e0f7-4326-ce55-d1a322b9cc9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[8.0, 9.0, 10.0],\n",
+              " [9.0, 7.0, 6.0],\n",
+              " [3.4, 7.0, 7.0],\n",
+              " [5.5, 6.6, 8.0],\n",
+              " [6.0, 10.0, 9.5]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1168,39 +1327,142 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres"
+      ],
       "metadata": {
-        "id": "YA1zJ0G6LkTy"
+        "id": "YA1zJ0G6LkTy",
+        "outputId": "efbf4acf-82c8-4020-970d-f3b035003b2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres[0][0]"
+      ],
+      "metadata": {
+        "id": "jVRxtOyeLngM",
+        "outputId": "495e4edd-8d15-4dac-e2ca-b518d04a9315",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'J'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import randint\n",
+        "\n",
+        "def genera_numero():\n",
+        "  return randint(0,999)"
+      ],
       "metadata": {
         "id": "yBzPwhGiLkWa"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "genera_numero()"
+      ],
       "metadata": {
-        "id": "9qgGAjSyLndK"
+        "id": "9qgGAjSyLndK",
+        "outputId": "dcb985bd-07b0-4283-a73b-d345208d6164",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "335"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigo_estudiantes=[]\n",
+        "for i in range(len(nombres)):\n",
+        "  codigo_estudiantes.append((nombres[i], nombres[i][0] + str(genera_numero())))\n"
+      ],
+      "metadata": {
+        "id": "Fec2QOxQpA-A"
+      },
+      "execution_count": 116,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "codigo_estudiantes"
+      ],
       "metadata": {
-        "id": "jVRxtOyeLngM"
+        "id": "p7IdWBmHpBAw",
+        "outputId": "406e1afc-1195-4389-a0d7-d31fd1d21be0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 'J594'),\n",
+              " ('Maria', 'M422'),\n",
+              " ('José', 'J950'),\n",
+              " ('Claudia', 'C348'),\n",
+              " ('Ana', 'A668')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
     },
     {
       "cell_type": "markdown",
